@@ -89,7 +89,7 @@ Documentation:</p>
     access.  See the <a href="faq.html#repoaccess">FAQ</a> for more
     information.
   </li>
-  <li>Python 2.2 or greater.  See
+  <li>Python 2.4 or greater.  See
     <a href="http://www.python.org/">http://www.python.org/.</a>
   </li>
   <li>If you use the <tt>--use-rcs</tt> option, then RCS's `co'
